GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

============================================================

PyKota NEWS :
       
    - 1.24alpha6 :
    
        - Now command line errors and Ctrl+C repectively cause
          PyKota commands to exit with status -2 and -3.
          
    - 1.24alpha5 :
    
        - All command line tools now accept -A | --arguments filename.args
          as a way to bypass the shell's maximal command line size :
          just put each argument on a line by itself in a file, and
          pass the file's name as the -A | --arguments command line
          option's argument. For now this won't be documented in
          commands' helps.
          
        - dumpykota can now dump the complete database in XML 
          format.
          
    - 1.24alpha4 :
    
        - Added support for the SQLite3 backend.
          See pykota/initscripts/sqlite/README.sqlite
        
    - 1.24alpha3 :
    
        - Fix for mailandpopup.sh : smbstatus can't be run setuid, 
          so we regain priviledges before running an external 
          mailto directive.
        
    - 1.24alpha2 :
    
        - Introduce the "onbackenderror" directive in pykota.conf, to
          control if the user must be charged or not whenever a real
          CUPS backend fails. The default value is 'nocharge'.
          Set it to 'charge' if you think your users can cause a CUPS
          backend to fail.
          
        - Now mark original backends related problems as such in the 
          printing history. Modified printquota.cgi and pykota.css
          to make them be more visible.
          
    - 1.24alpha1 :
    
        - Fixed a problem which caused backend errors to be ignored.
        