@@ -241,6 +241,7 @@ Contributors :
   - Michal Dobroczynski - Polish translation.
   - Jamuel P. Starkey - GCI Systems - Secondary MX server.
   - Kris Kopicki - Walford Anglican School for Girls Inc. - Wrote pykotadmin.
+  - Brandon Holbrook - Mississipi State University : improved waitprinter.sh
 
 ==============================================================
 
